--- a/admin-select.html
+++ b/admin-select.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
   <title>Wybor tresci | Admin | AquiVivo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/styles.css?v=20260208c" />
-  <script src="assets/js/layout.js?v=20260208c" type="module"></script>
+  <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
+  <script src="assets/js/layout.js?v=20260208d" type="module"></script>
 </head>
 <body data-page="admin-select">
   <div id="appHeader"></div>
