--- a/buscar.html
+++ b/buscar.html
@@ -1,4 +1,4 @@
-ï»¿<!doctype html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208c" />
-    <script src="assets/js/layout.js?v=20260208c" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
+    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
   </head>
 
   <body data-page="buscar">
@@ -31,7 +31,7 @@
           </section>
 
           <section class="card" style="margin-top: 12px">
-            <div class="sectionTitle" style="margin-top: 0">BÃºsqueda</div>
+            <div class="sectionTitle" style="margin-top: 0">Búsqueda</div>
             <div class="peopleSearchBar buscarSearchBar" style="margin-top: 10px">
               <div class="ps-avatar" id="buscarAvatar" aria-hidden="true">
                 <img id="buscarAvatarImg" alt="" loading="lazy" />
@@ -70,10 +70,10 @@
           </section>
 
           <section class="card" id="buscarTipsCard" style="margin-top: 12px">
-            <div class="sectionTitle" style="margin-top: 0">Ideas rÃ¡pidas</div>
+            <div class="sectionTitle" style="margin-top: 0">Ideas rápidas</div>
             <div class="muted">
-              Prueba buscar por <b>@usuario</b>, o por el comienzo del nombre. TambiÃ©n puedes abrir un
-              perfil y seguirlo para ver mÃ¡s actividad.
+              Prueba buscar por <b>@usuario</b>, o por el comienzo del nombre. También puedes abrir un
+              perfil y seguirlo para ver más actividad.
             </div>
             <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
               <a class="btn-white-outline" href="perfil.html">Ir a mi perfil</a>
