--- a/kontakt.html
+++ b/kontakt.html
@@ -1,4 +1,4 @@
-Ôªø<!doctype html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208c" />
-    <script src="assets/js/layout.js?v=20260208c" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
+    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
   </head>
 
   <body data-page="contacto">
@@ -23,7 +23,7 @@
             <div>
               <h1 class="glow-text" style="margin: 0">Contacto</h1>
               <div class="subtitle" style="margin-top: 6px">
-                Datos de contacto y horario de atenci√≥n.
+                Datos de contacto y horario de atenciÛn.
               </div>
             </div>
           </div>
@@ -34,7 +34,7 @@
           <div class="muted">
             <strong>Magdalena Meller</strong><br />
             ul. Katowicka 2F/6.01<br />
-            61-131 Pozna≈Ñ, Polonia<br />
+            61-131 Poznan, Polonia<br />
             NIP: 7822348796<br />
             REGON: 542556870
           </div>
@@ -50,10 +50,10 @@
         </section>
 
         <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Horario de atenci√≥n</div>
+          <div class="sectionTitle" style="margin-top: 0">Horario de atenciÛn</div>
           <div class="muted">
-            Contacto por correo: 7 d√≠as a la semana<br />
-            Contacto telef√≥nico: lunes&ndash;viernes, 10:00&ndash;16:00
+            Contacto por correo: 7 dÌas a la semana<br />
+            Contacto telefÛnico: lunes&ndash;viernes, 10:00&ndash;16:00
           </div>
         </section>
       </div>
