--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-Ôªø<!doctype html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
@@ -8,15 +8,15 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208c" />
-    <script src="assets/js/layout.js?v=20260208c" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
+    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
   </head>
 
   <body
     data-page="services"
     data-paypal-currency="PLN"
     data-paypal-disable-funding="venmo"
-    data-paypal-client-id=""
+    data-paypal-client-id="BAAtX6GPLaaLeRMKMgh-3A28oPN2OTGftJ7XV3ceTcK93ioFgfgpqLSYTmvquAIwDLRONG2-lngqal_rP4"
     data-paypal-sdk-src=""
   >
     <div id="appHeader"></div>
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="heroBanner">
           <div class="heroTitleRow">
-            <div class="heroIcon">‚ú®</div>
+            <div class="heroIcon">?</div>
             <div>
               <h1 class="glow-text" style="margin: 0; font-size: 44px">
                 Servicios
@@ -39,7 +39,7 @@
 
         <div class="servicesTopGrid" id="servicesTop">
           <div class="card" id="checkoutCard">
-            <div class="sectionTitle" style="margin-top: 0">‚úÖ Antes de comprar</div>
+            <div class="sectionTitle" style="margin-top: 0">? Antes de comprar</div>
 
             <div
               class="metaRow"
@@ -47,7 +47,7 @@
             >
               <input id="checkoutConsent" type="checkbox" />
               <label for="checkoutConsent" style="margin: 0">
-                He le√≠do y acepto lo anterior.
+                He leÌdo y acepto lo anterior.
               </label>
             </div>
 
@@ -56,15 +56,15 @@
               <div class="hintSmall consentDetailsBody">
                 <ul style="margin: 8px 0 0; padding-left: 18px">
                   <li>
-                    Aceptas los <a href="regulamin.html">T√©rminos</a> y la
-                    <a href="polityka-prywatnosci.html">Pol√≠tica de privacidad</a>.
+                    Aceptas los <a href="regulamin.html">TÈrminos</a> y la
+                    <a href="polityka-prywatnosci.html">PolÌtica de privacidad</a>.
                   </li>
                   <li>
                     Si tu compra incluye contenido digital con acceso inmediato, solicitas la
                     entrega inmediata.
                   </li>
                   <li>
-                    Puede aplicarse p√©rdida del derecho de desistimiento una vez otorgado el
+                    Puede aplicarse pÈrdida del derecho de desistimiento una vez otorgado el
                     acceso (ver <a href="zwroty.html">Devoluciones</a>).
                   </li>
                 </ul>
@@ -73,24 +73,24 @@
           </div>
 
           <div class="card" id="trialCard">
-            <div class="sectionTitle" style="margin-top: 0">üéÅ Prueba gratis A1</div>
+            <div class="sectionTitle" style="margin-top: 0">?? Prueba gratis A1</div>
             <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
               <button class="btn-yellow" id="btnTrialA1" type="button">
-                Activa A1 gratis 7 d√≠as
+                Activa A1 gratis 7 dÌas
               </button>
             </div>
             <div class="hintSmall" id="trialMsg" style="margin-top: 8px; display: none"></div>
           </div>
 
           <div class="card" id="paypalCard">
-            <div class="sectionTitle" style="margin-top: 0">üÖøÔ∏è PayPal</div>
+            <div class="sectionTitle" style="margin-top: 0">??? PayPal</div>
             <div class="muted">
-              Si prefieres PayPal, puedes pagar aqu√≠ (moneda: <b>PLN</b>).
+              Si prefieres PayPal, puedes pagar aquÌ (moneda: <b>PLN</b>).
               <div class="hintSmall" style="margin-top: 6px">
-                Para habilitar el bot√≥n, marca la casilla de aceptaci√≥n de arriba.
+                Para habilitar el botÛn, marca la casilla de aceptaciÛn de arriba.
               </div>
               <div class="hintSmall" style="margin-top: 6px">
-                Si el bot√≥n no carga, usa ‚ÄúAbrir PayPal‚Äù.
+                Si el botÛn no carga, usa ìAbrir PayPalî.
               </div>
             </div>
 
@@ -102,7 +102,7 @@
                 aria-label="Pagar con PayPal"
               ></div>
               <div class="paypal-hosted-overlay" id="paypalHostedOverlay" aria-hidden="true">
-                Marca la casilla de aceptaci√≥n para habilitar PayPal.
+                Marca la casilla de aceptaciÛn para habilitar PayPal.
               </div>
             </div>
 
@@ -122,22 +122,22 @@
         </div>
 
         <section id="planes" class="services-section">
-          <h2 class="sectionTitle" style="margin-top: 0">üìå Planes</h2>
+          <h2 class="sectionTitle" style="margin-top: 0">?? Planes</h2>
           <div id="servicesPlansGrid" class="services-grid"></div>
         </section>
 
         <section id="servicios" class="services-section">
-          <h2 class="sectionTitle" style="margin-top: 0">üß© Servicios</h2>
+          <h2 class="sectionTitle" style="margin-top: 0">?? Servicios</h2>
           <div id="servicesServicesGrid" class="services-grid"></div>
         </section>
 
         <section id="ebooks" class="services-section">
-          <h2 class="sectionTitle" style="margin-top: 0">üìö Ebooks</h2>
+          <h2 class="sectionTitle" style="margin-top: 0">?? Ebooks</h2>
           <div id="servicesEbooksGrid" class="services-grid"></div>
         </section>
 
         <section id="extras" class="services-section">
-          <h2 class="sectionTitle" style="margin-top: 0">‚ú® Extras</h2>
+          <h2 class="sectionTitle" style="margin-top: 0">? Extras</h2>
           <div id="servicesExtrasGrid" class="services-grid"></div>
         </section>
 
@@ -151,7 +151,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/services-page.js?v=20260208c"></script>
+    <script type="module" src="assets/js/pages/services-page.js?v=20260208d"></script>
   </body>
 </html>
 
