--- a/zwroty.html
+++ b/zwroty.html
@@ -1,4 +1,4 @@
-Ôªø<!doctype html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208c" />
-    <script src="assets/js/layout.js?v=20260208c" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
+    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
   </head>
 
   <body data-page="returns">
@@ -23,7 +23,7 @@
             <div>
               <h1 class="glow-text" style="margin: 0">Devoluciones y desistimiento</h1>
               <div class="subtitle" style="margin-top: 6px">
-                Informaci√≥n sobre el derecho de desistimiento y la excepci√≥n para contenidos
+                InformaciÛn sobre el derecho de desistimiento y la excepciÛn para contenidos
                 digitales.
               </div>
             </div>
@@ -31,54 +31,54 @@
         </section>
 
         <details class="card detailsCard" style="margin-top: 12px" open>
-          <summary class="sectionTitle">Derecho de desistimiento (14 d√≠as)</summary>
+          <summary class="sectionTitle">Derecho de desistimiento (14 dÌas)</summary>
           <div class="detailsBody muted">
             De acuerdo con la normativa de la UE, el consumidor tiene derecho a desistir del
-            contrato celebrado a distancia en un plazo de 14 d√≠as sin indicar el motivo.
+            contrato celebrado a distancia en un plazo de 14 dÌas sin indicar el motivo.
           </div>
         </details>
 
         <details class="card detailsCard" style="margin-top: 12px">
-          <summary class="sectionTitle">Excepci√≥n para contenidos digitales</summary>
+          <summary class="sectionTitle">ExcepciÛn para contenidos digitales</summary>
           <div class="detailsBody muted">
             En el caso de la compra de contenidos digitales que se entregan inmediatamente
-            despu√©s de la compra, el derecho de desistimiento se extingue en el momento en que
+            despuÈs de la compra, el derecho de desistimiento se extingue en el momento en que
             el usuario obtiene acceso al contenido, siempre que haya dado su consentimiento
-            para la prestaci√≥n inmediata del servicio y haya sido informado de la p√©rdida del
+            para la prestaciÛn inmediata del servicio y haya sido informado de la pÈrdida del
             derecho de desistimiento.
             <br /><br />
-            Al comprar acceso a los cursos y materiales de AquiVivo, aceptas la prestaci√≥n
+            Al comprar acceso a los cursos y materiales de AquiVivo, aceptas la prestaciÛn
             inmediata del servicio y reconoces que pierdes el derecho de desistimiento una vez
             que obtengas acceso a los contenidos digitales.
           </div>
         </details>
 
         <details class="card detailsCard" style="margin-top: 12px">
-          <summary class="sectionTitle">Servicios con cita (reprogramaci√≥n y cancelaci√≥n)</summary>
+          <summary class="sectionTitle">Servicios con cita (reprogramaciÛn y cancelaciÛn)</summary>
           <div class="detailsBody muted">
-            Adem√°s de tus derechos legales, para Servicios que requieren agenda (por ejemplo,
-            clases en vivo o acompa√±amiento), aplican estas reglas generales:
+            Adem·s de tus derechos legales, para Servicios que requieren agenda (por ejemplo,
+            clases en vivo o acompaÒamiento), aplican estas reglas generales:
             <ul>
               <li>
-                Reprogramaci√≥n sin costo: avisa con al menos <b>24 horas</b> (online) o
-                <b>48 horas</b> (presencial/coordinaci√≥n externa).
+                ReprogramaciÛn sin costo: avisa con al menos <b>24 horas</b> (online) o
+                <b>48 horas</b> (presencial/coordinaciÛn externa).
               </li>
               <li>
                 Si avisas con menos tiempo o no te presentas, el Servicio puede considerarse
                 realizado (por el tiempo reservado).
               </li>
             </ul>
-            Los detalles pueden variar si la oferta indica una regla distinta. La versi√≥n
-            completa est√° en <a href="regulamin.html">T√©rminos y condiciones</a>.
+            Los detalles pueden variar si la oferta indica una regla distinta. La versiÛn
+            completa est· en <a href="regulamin.html">TÈrminos y condiciones</a>.
           </div>
         </details>
 
         <details class="card detailsCard" style="margin-top: 12px">
           <summary class="sectionTitle">Reclamaciones y contacto</summary>
           <div class="detailsBody muted">
-            Para cualquier pregunta sobre devoluciones y reclamaciones, cont√°ctanos en:
+            Para cualquier pregunta sobre devoluciones y reclamaciones, cont·ctanos en:
             <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>
-            o por tel√©fono: <a href="tel:+48669697151">+48 669 697 151</a>.
+            o por telÈfono: <a href="tel:+48669697151">+48 669 697 151</a>.
           </div>
         </details>
       </div>
