--- a/ajustes.html
+++ b/ajustes.html
@@ -1,4 +1,4 @@
-ï»¿<!doctype html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208c" />
-    <script src="assets/js/layout.js?v=20260208c" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
+    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
   </head>
 
   <body data-page="ajustes">
@@ -75,7 +75,7 @@
                     autocomplete="off"
                     spellcheck="false"
                   />
-                  <div class="hintSmall">3â€“20 caracteres: letras, nÃºmeros y . _ -</div>
+                  <div class="hintSmall">3–20 caracteres: letras, números y . _ -</div>
                 </div>
               </div>
 
@@ -91,7 +91,7 @@
                 <div class="info-field">
                   <label for="settingsLang">Idioma</label>
                   <select id="settingsLang" class="select">
-                    <option value="es">EspaÃ±ol</option>
+                    <option value="es">Español</option>
                     <option value="pl">Polski</option>
                     <option value="en">English</option>
                   </select>
@@ -137,12 +137,12 @@
         </section>
 
         <section class="card" id="sobre-mi" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Sobre mÃ­</div>
-          <div class="muted">Esto se muestra en tu perfil pÃºblico (si lo permites).</div>
+          <div class="sectionTitle" style="margin-top: 0">Sobre mí</div>
+          <div class="muted">Esto se muestra en tu perfil público (si lo permites).</div>
 
           <div class="info-grid" style="margin-top: 12px">
             <div class="info-field">
-              <label for="settingsBioWhy">Â¿Por quÃ© aprendo polaco?</label>
+              <label for="settingsBioWhy">¿Por qué aprendo polaco?</label>
               <textarea
                 id="settingsBioWhy"
                 class="input"
@@ -152,12 +152,12 @@
             </div>
 
             <div class="info-field">
-              <label for="settingsBioHard">Â¿QuÃ© me cuesta mÃ¡s?</label>
+              <label for="settingsBioHard">¿Qué me cuesta más?</label>
               <textarea
                 id="settingsBioHard"
                 class="input"
                 rows="3"
-                placeholder="Lo que se te hace difÃ­cil..."
+                placeholder="Lo que se te hace difícil..."
               ></textarea>
             </div>
 
@@ -172,12 +172,12 @@
             </div>
 
             <div class="info-field">
-              <label for="settingsBioLocation">UbicaciÃ³n</label>
+              <label for="settingsBioLocation">Ubicación</label>
               <input
                 id="settingsBioLocation"
                 class="input"
                 type="text"
-                placeholder="Ciudad, PaÃ­s"
+                placeholder="Ciudad, País"
               />
             </div>
 
@@ -208,7 +208,7 @@
                 id="settingsBioInterests"
                 class="input"
                 type="text"
-                placeholder="Viajes, cultura, mÃºsica..."
+                placeholder="Viajes, cultura, música..."
               />
             </div>
           </div>
@@ -221,13 +221,13 @@
 
         <section class="card" id="privacidad" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">Privacidad</div>
-          <div class="muted">Controla quiÃ©n puede ver y contactarte.</div>
+          <div class="muted">Controla quién puede ver y contactarte.</div>
 
           <div class="privacy-grid" style="margin-top: 12px">
             <div class="privacy-item">
               <label for="settingsPostsVisibility">Visibilidad de publicaciones</label>
               <select id="settingsPostsVisibility" class="select">
-                <option value="public">PÃºblicas</option>
+                <option value="public">Públicas</option>
                 <option value="friends">Solo amigos</option>
                 <option value="private">Solo yo</option>
               </select>
@@ -236,7 +236,7 @@
             <div class="privacy-item">
               <label for="settingsRewardsVisibility">Recompensas visibles</label>
               <select id="settingsRewardsVisibility" class="select">
-                <option value="public">SÃ­</option>
+                <option value="public">Sí</option>
                 <option value="private">Ocultas</option>
               </select>
             </div>
@@ -253,7 +253,7 @@
           <div class="settings-toggles" style="margin-top: 12px">
             <label class="toggle-line">
               <input id="settingsPublicProfile" type="checkbox" />
-              Perfil pÃºblico
+              Perfil público
             </label>
             <label class="toggle-line">
               <input id="settingsAllowFriendRequests" type="checkbox" />
@@ -285,17 +285,17 @@
               <option value="15">15 min</option>
             </select>
 
-            <label class="hintSmall" style="font-weight: 900">Tarjetas/dÃ­a</label>
+            <label class="hintSmall" style="font-weight: 900">Tarjetas/día</label>
             <select id="settingsReviewLimit" class="select" style="min-width: 160px">
               <option value="10">10</option>
               <option value="20">20</option>
               <option value="30">30</option>
             </select>
 
-            <label class="hintSmall" style="font-weight: 900">DirecciÃ³n</label>
+            <label class="hintSmall" style="font-weight: 900">Dirección</label>
             <select id="settingsReviewDirection" class="select" style="min-width: 200px">
-              <option value="pl_es">PL â†’ ES</option>
-              <option value="es_pl">ES â†’ PL</option>
+              <option value="pl_es">PL ? ES</option>
+              <option value="es_pl">ES ? PL</option>
               <option value="mixed">Mixto</option>
             </select>
 
@@ -305,7 +305,7 @@
         </section>
 
         <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Accesos rÃ¡pidos</div>
+          <div class="sectionTitle" style="margin-top: 0">Accesos rápidos</div>
           <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
             <a class="btn-white-outline" href="espanel.html">Volver a Libreta</a>
             <a class="btn-white-outline" href="perfil.html">Ir a Perfil</a>
