--- a/esadmin.html
+++ b/esadmin.html
@@ -1,11 +1,11 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
     <title>Admin | AquiVivo</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link href="assets/css/styles.css?v=20260208c" rel="stylesheet" />
-    <script src="assets/js/layout.js?v=20260208c" type="module"></script>
+    <link href="assets/css/styles.css?v=20260208d" rel="stylesheet" />
+    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
   </head>
   <body data-page="esadmin">
     <div id="appHeader"></div>
