--- a/perfil.html
+++ b/perfil.html
@@ -1,4 +1,4 @@
-ï»¿<!doctype html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
@@ -9,23 +9,23 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208c" />
-    <script src="assets/js/layout.js?v=20260208c" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
+    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
   </head>
 
   <body data-page="profile" class="with-side-panel">
     <div id="appHeader"></div>
     <aside id="sidePanel" class="side-panel">
-      <a href="espanel.html" data-page="panel">ğŸ“’ Libreta</a>
-      <a href="buscar.html" data-page="buscar">ğŸ” Buscar</a>
-      <a href="perfil.html" data-page="profile" class="is-active">ğŸ‘¤ Perfil</a>
-      <a href="espanel.html#cursos" data-page="cursos">ğŸ“š Mis cursos</a>
-      <a href="review.html" data-page="practicar">ğŸ” Practicar</a>
-      <a href="recompensas.html" data-page="recompensas">ğŸ† Recompensas</a>
-      <a href="referidos.html" data-page="referidos">ğŸ¤ Recomendar</a>
-      <a href="ajustes.html" data-page="ajustes">âš™ï¸ Ajustes</a>
-      <a href="pagos.html" data-page="pagos">ğŸ’³ Pagos</a>
-      <a href="ayuda.html" data-page="ayuda">ğŸ†˜ Ayuda</a>
+      <a href="espanel.html" data-page="panel">?? Libreta</a>
+      <a href="buscar.html" data-page="buscar">?? Buscar</a>
+      <a href="perfil.html" data-page="profile" class="is-active">?? Perfil</a>
+      <a href="espanel.html#cursos" data-page="cursos">?? Mis cursos</a>
+      <a href="review.html" data-page="practicar">?? Practicar</a>
+      <a href="recompensas.html" data-page="recompensas">?? Recompensas</a>
+      <a href="referidos.html" data-page="referidos">?? Recomendar</a>
+      <a href="ajustes.html" data-page="ajustes">?? Ajustes</a>
+      <a href="pagos.html" data-page="pagos">?? Pagos</a>
+      <a href="ayuda.html" data-page="ayuda">?? Ayuda</a>
     </aside>
 
     <main class="page profile-page">
@@ -62,7 +62,7 @@
                   Perfil
                 </h1>
                 <div class="muted" id="profileHandle" style="margin-top: 6px"></div>
-                <div class="muted" id="profileStatus" style="margin-top: 6px">â€”</div>
+                <div class="muted" id="profileStatus" style="margin-top: 6px">—</div>
                 <div class="profileStats">
                   <div class="statCard">
                     <div class="statValue" id="statStreak">0</div>
@@ -73,7 +73,7 @@
                     <div class="statLabel">EXP</div>
                   </div>
                   <div class="statCard">
-                    <div class="statValue" id="statLeague">â€”</div>
+                    <div class="statValue" id="statLeague">—</div>
                     <div class="statLabel">Liga</div>
                   </div>
                   <div class="statCard">
@@ -146,8 +146,8 @@
             </div>
             <div id="profileSearchStatus" class="hintSmall" style="margin-top: 6px"></div>
             <div id="profileSearchResults" class="friendList" style="margin-top: 8px"></div>
-            <div class="sectionTitle" style="margin-top: 16px">Ãšltimas reacciones</div>
-            <div class="muted" id="recentReactions">Sin reacciones aÃºn.</div>
+            <div class="sectionTitle" style="margin-top: 16px">Últimas reacciones</div>
+            <div class="muted" id="recentReactions">Sin reacciones aún.</div>
             <div class="sectionTitle" style="margin-top: 16px">Sugerencias</div>
             <div class="friendList" id="suggestionsList"></div>
             <div class="metaRow" style="margin-top: 12px">
@@ -165,7 +165,7 @@
             <div class="storiesHead">
               <div>
                 <div class="sectionTitle" style="margin-top: 0">Historias</div>
-                <div class="muted" id="storiesHint">â€”</div>
+                <div class="muted" id="storiesHint">—</div>
               </div>
               <div class="metaRow" style="gap: 10px">
                 <input id="storyFileInput" type="file" accept="image/*" hidden />
@@ -179,7 +179,7 @@
             <div class="storiesHead">
               <div>
                 <div class="sectionTitle" style="margin-top: 0">Destacados</div>
-                <div class="muted" id="highlightsHint">â€”</div>
+                <div class="muted" id="highlightsHint">—</div>
               </div>
             </div>
             <div class="storiesRow" id="highlightsRow" aria-label="Destacados"></div>
@@ -190,8 +190,8 @@
               <div class="modalHead">
                 <div class="modalTitle" id="storyModalTitle">Historia</div>
                 <div class="metaRow" style="gap: 8px">
-                  <button class="btn-white-outline" id="storyPrevBtn" type="button">â€¹</button>
-                  <button class="btn-white-outline" id="storyNextBtn" type="button">â€º</button>
+                  <button class="btn-white-outline" id="storyPrevBtn" type="button">‹</button>
+                  <button class="btn-white-outline" id="storyNextBtn" type="button">›</button>
                   <button class="btn-white-outline" id="storyCloseBtn" type="button">Cerrar</button>
                 </div>
               </div>
@@ -214,7 +214,7 @@
           </div>
 
           <div class="profile-tabs" role="tablist" aria-label="Secciones del perfil">
-            <button class="profile-tab-btn is-active" data-tab="info" type="button">Sobre mÃ­</button>
+            <button class="profile-tab-btn is-active" data-tab="info" type="button">Sobre mí</button>
             <button class="profile-tab-btn" data-tab="feed" type="button">Feed</button>
             <button class="profile-tab-btn" data-tab="media" type="button">Fotos</button>
             <button
@@ -235,19 +235,19 @@
 
           <section class="profile-tab is-active" id="tab-info">
             <div class="card profile-public" id="profilePublicCard">
-              <div class="sectionTitle" style="margin-top: 0">AsÃ­ te ven otros</div>
+              <div class="sectionTitle" style="margin-top: 0">Así te ven otros</div>
               <div class="publicBioGrid">
                 <div class="publicBioItem">
                   <div class="publicBioLabel">Motivo</div>
-                  <div class="publicBioValue" id="publicBioWhy">â€”</div>
+                  <div class="publicBioValue" id="publicBioWhy">—</div>
                 </div>
                 <div class="publicBioItem">
-                  <div class="publicBioLabel">Lo mÃ¡s difÃ­cil</div>
-                  <div class="publicBioValue" id="publicBioHard">â€”</div>
+                  <div class="publicBioLabel">Lo más difícil</div>
+                  <div class="publicBioValue" id="publicBioHard">—</div>
                 </div>
                 <div class="publicBioItem">
                   <div class="publicBioLabel">Meta</div>
-                  <div class="publicBioValue" id="publicBioGoal">â€”</div>
+                  <div class="publicBioValue" id="publicBioGoal">—</div>
                 </div>
               </div>
 
@@ -260,19 +260,19 @@
                   rel="noopener"
                   style="display: none"
                 >
-                  <span class="publicFactIcon" aria-hidden="true">ğŸ”—</span>
+                  <span class="publicFactIcon" aria-hidden="true">??</span>
                   <span id="publicBioWebsite"></span>
                 </a>
                 <div class="publicFact" id="publicLocationWrap" style="display: none">
-                  <span class="publicFactIcon" aria-hidden="true">ğŸ“</span>
+                  <span class="publicFactIcon" aria-hidden="true">??</span>
                   <span id="publicBioLocation"></span>
                 </div>
                 <div class="publicFact" id="publicLanguagesWrap" style="display: none">
-                  <span class="publicFactIcon" aria-hidden="true">ğŸ—£ï¸</span>
+                  <span class="publicFactIcon" aria-hidden="true">???</span>
                   <span id="publicBioLanguages"></span>
                 </div>
                 <div class="publicFact" id="publicInterestsWrap" style="display: none">
-                  <span class="publicFactIcon" aria-hidden="true">âœ¨</span>
+                  <span class="publicFactIcon" aria-hidden="true">?</span>
                   <span id="publicBioInterests"></span>
                 </div>
               </div>
@@ -281,7 +281,7 @@
 
             <div class="card" id="activityCard" style="display: none">
               <div class="sectionTitle" style="margin-top: 0">Actividad</div>
-              <div class="muted" id="activityHint">â€”</div>
+              <div class="muted" id="activityHint">—</div>
               <div class="activityGrid" id="activityGrid" style="margin-top: 12px"></div>
               <div class="hintSmall" id="activitySummary" style="margin-top: 10px"></div>
             </div>
@@ -289,7 +289,7 @@
             <div class="card" id="profileEditHintCard" style="display: none">
               <div class="sectionTitle" style="margin-top: 0">Editar perfil</div>
               <div class="muted">
-                La ediciÃ³n de tu informaciÃ³n, privacidad y preferencias estÃ¡ en Ajustes.
+                La edición de tu información, privacidad y preferencias está en Ajustes.
               </div>
               <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
                 <a class="btn-yellow" href="ajustes.html#perfil">Abrir Ajustes</a>
@@ -299,7 +299,7 @@
 
           <section class="profile-tab" id="tab-feed">
             <div class="card status-card" id="statusCard">
-              <div class="status-heart" id="statusHeart">â¤ï¸</div>
+              <div class="status-heart" id="statusHeart">??</div>
               <div class="statusInputRow">
                 <div class="nav-avatar nav-avatar--small statusAvatar" id="statusAvatar">
                   <img id="statusAvatarImg" alt="Foto de perfil" style="display: none" />
@@ -309,26 +309,26 @@
                   id="statusInput"
                   class="statusInput"
                   rows="3"
-                  placeholder="Â¿CÃ³mo te sientes aprendiendo hoy?&#10;Puedes escribir en espaÃ±ol o polaco ğŸ’›"
+                  placeholder="¿Cómo te sientes aprendiendo hoy?&#10;Puedes escribir en español o polaco ??"
                 ></textarea>
               </div>
               <div class="statusTools">
-                <button class="statusChip" data-tag="estado" id="statusMood">ğŸ˜Š Estado</button>
+                <button class="statusChip" data-tag="estado" id="statusMood">?? Estado</button>
                 <select id="statusMinutes" class="select statusSelect">
-                  <option value="">â˜• Aprendizaje</option>
+                  <option value="">? Aprendizaje</option>
                   <option value="5">5 min</option>
                   <option value="10">10 min</option>
                   <option value="15">15 min</option>
                   <option value="20">20 min</option>
                 </select>
                 <select id="statusCourse" class="select statusSelect">
-                  <option value="">ğŸ“˜ Curso</option>
+                  <option value="">?? Curso</option>
                   <option value="A1">A1</option>
                   <option value="A2">A2</option>
                   <option value="B1">B1</option>
                   <option value="B2">B2</option>
                 </select>
-                <button class="statusChip" data-tag="motivacion" id="statusMotivation">â¤ï¸ MotivaciÃ³n</button>
+                <button class="statusChip" data-tag="motivacion" id="statusMotivation">?? Motivación</button>
               </div>
               <div class="statusActions">
                 <button class="btn-yellow" id="statusPostBtn" type="button" disabled>Publicar</button>
@@ -348,7 +348,7 @@
                   id="feedSearchInput"
                   class="input"
                   type="text"
-                  placeholder="Filtra por #tag o textoâ€¦"
+                  placeholder="Filtra por #tag o texto…"
                   style="max-width: 260px"
                 />
                 <button class="btn-white-outline" id="btnFeedClear" type="button">Limpiar</button>
@@ -397,7 +397,7 @@
                   id="mediaCaption"
                   class="input"
                   type="text"
-                  placeholder="Escribe un pie de foto (opcional)â€¦"
+                  placeholder="Escribe un pie de foto (opcional)…"
                 />
                 <div class="hintSmall" id="mediaMsg"></div>
               </div>
@@ -412,7 +412,7 @@
               <div class="muted">Solo visible para ti. Guarda publicaciones para verlas luego.</div>
               <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
                 <button class="btn-white-outline" id="btnNewCollection" type="button">
-                  + ColecciÃ³n
+                  + Colección
                 </button>
                 <span class="hintSmall" id="savedStatus"></span>
               </div>
@@ -424,9 +424,9 @@
           <section class="profile-tab" id="tab-friends">
             <div class="card">
               <div class="sectionTitle" style="margin-top: 0">Amigos</div>
-              <div class="muted" id="friendsHint">â€”</div>
+              <div class="muted" id="friendsHint">—</div>
               <div class="friendsToolbar">
-                <input id="friendsSearch" class="input" type="text" placeholder="Buscar amigosâ€¦" />
+                <input id="friendsSearch" class="input" type="text" placeholder="Buscar amigos…" />
                 <div class="friendsCountPill" id="friendsTotal">0</div>
               </div>
               <div class="friendList" id="friendsList" style="margin-top: 12px"></div>
@@ -436,9 +436,9 @@
           <section class="profile-tab" id="tab-followers">
             <div class="card">
               <div class="sectionTitle" style="margin-top: 0">Seguidores</div>
-              <div class="muted" id="followersHint">â€”</div>
+              <div class="muted" id="followersHint">—</div>
               <div class="friendsToolbar">
-                <input id="followersSearch" class="input" type="text" placeholder="Buscar seguidoresâ€¦" />
+                <input id="followersSearch" class="input" type="text" placeholder="Buscar seguidores…" />
                 <div class="friendsCountPill" id="followersTotal">0</div>
               </div>
               <div class="friendList" id="followersList" style="margin-top: 12px"></div>
@@ -448,9 +448,9 @@
           <section class="profile-tab" id="tab-following">
             <div class="card">
               <div class="sectionTitle" style="margin-top: 0">Siguiendo</div>
-              <div class="muted" id="followingHint">â€”</div>
+              <div class="muted" id="followingHint">—</div>
               <div class="friendsToolbar">
-                <input id="followingSearch" class="input" type="text" placeholder="Buscar personasâ€¦" />
+                <input id="followingSearch" class="input" type="text" placeholder="Buscar personas…" />
                 <div class="friendsCountPill" id="followingTotal">0</div>
               </div>
               <div class="friendList" id="followingList" style="margin-top: 12px"></div>
@@ -462,22 +462,22 @@
               <div class="sectionTitle" style="margin-top: 0">Tus logros</div>
               <div class="achievement-grid" id="rewardsGrid">
                 <div class="achievement-card" data-achievement="racha">
-                  <div class="achievement-title">ğŸ”¥ Rachas</div>
-                  <div class="achievement-value" id="rewardStreak">0 dÃ­as</div>
+                  <div class="achievement-title">?? Rachas</div>
+                  <div class="achievement-value" id="rewardStreak">0 días</div>
                   <div class="achievement-meta" id="rewardStreakMeta">Nivel 1</div>
                 </div>
                 <div class="achievement-card" data-achievement="insignias">
-                  <div class="achievement-title">ğŸ† Insignias</div>
+                  <div class="achievement-title">?? Insignias</div>
                   <div class="achievement-value" id="rewardBadges">0</div>
                   <div class="achievement-meta">Desbloqueadas</div>
                 </div>
                 <div class="achievement-card" data-achievement="dias">
-                  <div class="achievement-title">â˜• DÃ­as de aprendizaje</div>
-                  <div class="achievement-value" id="rewardDays">0 dÃ­as</div>
+                  <div class="achievement-title">? Días de aprendizaje</div>
+                  <div class="achievement-value" id="rewardDays">0 días</div>
                   <div class="achievement-meta">Constancia</div>
                 </div>
                 <div class="achievement-card" data-achievement="constancia">
-                  <div class="achievement-title">â¤ï¸ Constancia</div>
+                  <div class="achievement-title">?? Constancia</div>
                   <div class="achievement-value" id="rewardConsistency">0%</div>
                   <div class="achievement-meta">Promedio semanal</div>
                 </div>
